# NFA-index

./: .clang-format  CMakeLists.txt  LICENSE  README.md
example/: sorted-NFA.graphml
src/: main.cpp
src/DataStructure/: BitVector.cpp  BitVector.hpp  FullyIndexableDictionary.cpp  FullyIndexableDictionary.hpp  NFAIndex.cpp  NFAIndex.hpp  WTLargeAlphabet.cpp  WTLargeAlphabet.hpp
